--- a/clanok.tex
+++ b/clanok.tex
@@ -96,6 +96,7 @@ Ten istý zoznam, len číslovaný:
 
 
 \includepdf[page={1}]{new}
+\includepdf[page={1}]{Untitled}
 
 \subsection{Ešte nejaké vysvetlenie} \label{ina:este}
 
